--- a/_config.yml
+++ b/_config.yml
@@ -19,12 +19,12 @@
 # in the templates via {{ site.myvariable }}.
 
 title: Benjamin Percival
-email: benjamin.percival@liv.ac.uk
+email: benjamin.percival@liverpool.ac.uk
 description: >- # this means to ignore newlines until "baseurl:"
   Academic profile and esoterica. An inevitable outcome of living in a society of relentless self-promotion.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
-github_username:  thePlumbaked
+github_username:  BenjaminPercival
 
 # Build settings
 #theme: minima
